# deepflow_crew

./: .gitignore  README.md  chroma_viz.py  epstein_files_report.md  pyproject.toml
knowledge/: user_preference.txt
src/deepflow_crew/: crew.py  main.py
src/deepflow_crew/config/: agents.yaml  tasks.yaml
src/deepflow_crew/tools/: custom_tool.py
tests/: test_pdf_search.py
